--- a/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
+++ b/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "scrolled": false
    },
@@ -1754,7 +1754,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -2015,17 +2015,17 @@
        "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
-       "     backers_count country currency launched_date    end_date  staff_pick  \\\n",
-       "990             64      US      USD    2021-06-09  2021-06-18       False   \n",
-       "991            241      US      USD    2020-12-09  2021-05-26       False   \n",
-       "992            132      US      USD    2020-06-14  2021-02-09       False   \n",
-       "993             75      IT      EUR    2021-07-03  2021-07-08       False   \n",
-       "994            842      US      USD    2021-11-15  2021-12-07       False   \n",
-       "995           2043      US      USD    2020-12-29  2021-05-30       False   \n",
-       "996            112      US      USD    2021-10-15  2021-11-30       False   \n",
-       "997            139      IT      EUR    2021-11-06  2021-12-10       False   \n",
-       "998            374      US      USD    2020-10-08  2021-04-11       False   \n",
-       "999           1122      US      USD    2020-12-30  2021-08-18       False   \n",
+       "     backers_count country currency launch_date    end_date  staff_pick  \\\n",
+       "990             64      US      USD  2021-06-09  2021-06-18       False   \n",
+       "991            241      US      USD  2020-12-09  2021-05-26       False   \n",
+       "992            132      US      USD  2020-06-14  2021-02-09       False   \n",
+       "993             75      IT      EUR  2021-07-03  2021-07-08       False   \n",
+       "994            842      US      USD  2021-11-15  2021-12-07       False   \n",
+       "995           2043      US      USD  2020-12-29  2021-05-30       False   \n",
+       "996            112      US      USD  2021-10-15  2021-11-30       False   \n",
+       "997            139      IT      EUR  2021-11-06  2021-12-10       False   \n",
+       "998            374      US      USD  2020-10-08  2021-04-11       False   \n",
+       "999           1122      US      USD  2020-12-30  2021-08-18       False   \n",
        "\n",
        "     spotlight        category & sub-category      category  \\\n",
        "990       True             film & video/drama  film & video   \n",
@@ -2052,7 +2052,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2060,11 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
+    "# Merge the campaign_df with the category_df\n",
+    "campaign_merged_df = campaign_df.merge(category_df, how='left', on='category')\n",
     "\n",
+    "# Merge the result with the subcategory_df\n",
+    "campaign_merged_df = campaign_merged_df.merge(subcategory_df, how='left', on='subcategory')\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
@@ -2233,7 +2237,13 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_columns = ['cf_id', 'contact_id', 'company_name', 'description', 'goal', 'pledged',\n",
+    "                    'outcome', 'backers_count', 'country', 'currency', 'launch_date', 'end_date',\n",
+    "                    'category_id', 'subcategory_id']\n",
+    "campaign_df = campaign_df[campaign_columns]\n",
+    "\n",
+    "campaign_df.head()"
    ]
   },
   {
