--- a/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
+++ b/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>category_id</th>\n",
        "      <th>subcategory_id</th>\n",
@@ -2216,12 +2216,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
        "\n",
        "  category_id subcategory_id  \n",
        "0        cat1        subcat1  \n",
@@ -2231,7 +2231,7 @@
        "4        cat4        subcat4  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,14 +2241,14 @@
     "campaign_columns = ['cf_id', 'contact_id', 'company_name', 'description', 'goal', 'pledged',\n",
     "                    'outcome', 'backers_count', 'country', 'currency', 'launch_date', 'end_date',\n",
     "                    'category_id', 'subcategory_id']\n",
-    "campaign_df = campaign_df[campaign_columns]\n",
+    "campaign_cleaned = campaign_merged_df[campaign_columns]\n",
     "\n",
-    "campaign_df.head()"
+    "campaign_cleaned.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
