Updated Contacts Draft

--- a/Draft Notebooks/Contacts-Nida.ipynb
+++ b/Draft Notebooks/Contacts-Nida.ipynb
@@ -2,8 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "daf7a755",
+   "execution_count": 7,
+   "id": "aab7bffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "pd.set_option('max_colwidth', 400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d64b1e6f",
    "metadata": {},
    "outputs": [
     {
@@ -64,20 +78,20 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('../Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b1fb18a",
+   "id": "4864af85",
    "metadata": {},
    "source": [
     "### Create the Contacts DataFrame \n",
@@ -93,95 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f8be38a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contact_info</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                contact_info\n",
-       "0   {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}\n",
-       "1          {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}\n",
-       "2            {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}\n",
-       "3  {\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}\n",
-       "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
-    "contact_info_df.head()\n",
-    "\n",
-    "### Create the Contacts DataFrame \n",
-    "---\n",
-    "**Create a Contacts DataFrame that has the following columns:**\n",
-    "- A column named \"contact_id\"  that contains the unique number of the contact person.\n",
-    "- A column named \"first_name\" that contains the first name of the contact person.\n",
-    "- A column named \"last_name\" that contains the first name of the contact person.\n",
-    "- A column named \"email\" that contains the email address of the contact person\n",
-    "\n",
-    "Then export the DataFrame as a `contacts.csv` CSV file.contact_info_df_copy = contact_info_df.copy()\n",
-    "contact_info_df_copy.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "cc7028c2",
-   "metadata": {},
+   "execution_count": 20,
+   "id": "394b706a",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -254,19 +184,21 @@
        "4       2199  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the four-digit contact ID number.\n"
+    "# Extract the four-digit contact ID number.\n",
+    "contact_info_df['contact_id'] = contact_info_df['contact_info'].str.extract(r'\"contact_id\": (\\d+)')\n",
+    "contact_info_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "20d04284",
+   "execution_count": 16,
+   "id": "1b9520f4",
    "metadata": {},
    "outputs": [
     {
@@ -286,13 +218,14 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "24473043",
+   "execution_count": 21,
+   "id": "1b799d54",
    "metadata": {},
    "outputs": [
     {
@@ -312,13 +245,15 @@
     }
    ],
    "source": [
-    "# Convert the \"contact_id\" column to an int64 data type.\n"
+    "# Convert the \"contact_id\" column to an int64 data type.\n",
+    "contact_info_df['contact_id']= contact_info_df['contact_id'].astype(int)\n",
+    "contact_info_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "a6f66b18",
+   "execution_count": 22,
+   "id": "6199b198",
    "metadata": {},
    "outputs": [
     {
@@ -438,19 +373,21 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the name of the contact and add it to a new column.\n"
+    "# Extract the name of the contact and add it to a new column.\n",
+    "contact_info_df['name'] = contact_info_df['contact_info'].str.extract(r'\"name\": \"([^\"]+)\"')\n",
+    "contact_info_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "d58d8208",
+   "execution_count": 23,
+   "id": "24ff2676",
    "metadata": {},
    "outputs": [
     {
@@ -581,19 +518,23 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the email from the contacts and add the values to a new column.\n"
+    "# Extract the email from the contacts and add the values to a new column.\n",
+    "contact_info_df['email'] = contact_info_df['contact_info'].str.extract(r'\"email\": \"([^\"]+)\"')\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "contact_info_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "74cf99e7",
+   "execution_count": 32,
+   "id": "89e48ae2",
    "metadata": {},
    "outputs": [
     {
@@ -701,19 +642,21 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n"
+    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n",
+    "contacts_df = contact_info_df[['contact_id', 'name', 'email']].copy()\n",
+    "contacts_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "b8eab184",
+   "execution_count": 34,
+   "id": "7e9f41e9",
    "metadata": {},
    "outputs": [
     {
@@ -832,22 +775,25 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contacts_df[['first_name', 'last_name']] = contacts_df['name'].str.split(\" \", n=1, expand=True)\n",
     "\n",
+    "# Drop the name column\n",
+    "contacts_df.drop('name', axis=1, inplace=True)\n",
     "\n",
-    "# Drop the contact_name column\n"
+    "contacts_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "284fb75c",
+   "execution_count": 38,
+   "id": "65b4660f",
    "metadata": {},
    "outputs": [
     {
@@ -966,19 +912,21 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean = contacts_df[['contact_id', 'first_name', 'last_name', 'email']]\n",
+    "contacts_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "28a537a2",
+   "execution_count": 39,
+   "id": "eb54da1b",
    "metadata": {},
    "outputs": [
     {
@@ -1000,24 +948,25 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c0886d3f",
+   "execution_count": 40,
+   "id": "839b38ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "# contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contacts_df_clean.to_csv(\"../Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50042272",
+   "id": "9cc66ca5",
    "metadata": {},
    "outputs": [],
    "source": []
