--- a/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
+++ b/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2326,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -2437,7 +2437,7 @@
        "4       2199  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,13 +2445,14 @@
    "source": [
     "import re\n",
     "# Extract the four-digit contact ID number.\n",
-    "contact_info_df['contact_id'] = contact_info_df['contact_info'].str.extract(r'\"contact_id\": (\\d+)')\n",
+    "p = '\"contact_id\": (\\d+)'\n",
+    "contact_info_df['contact_id'] = contact_info_df['contact_info'].str.extract(p)\n",
     "contact_info_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2624,20 +2625,21 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract the name of the contact and add it to a new column.\n",
-    "contact_info_df['name'] = contact_info_df['contact_info'].str.extract(r'\"name\": \"([^\"]+)\"')\n",
+    "p = '\"name\": \"([^\"]+)\"'\n",
+    "contact_info_df['name'] = contact_info_df['contact_info'].str.extract(p)\n",
     "contact_info_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2768,14 +2770,15 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract the email from the contacts and add the values to a new column.\n",
-    "contact_info_df['email'] = contact_info_df['contact_info'].str.extract(r'\"email\": \"([^\"]+)\"')\n",
+    "p = '\"email\": \"([^\"]+)\"'\n",
+    "contact_info_df['email'] = contact_info_df['contact_info'].str.extract(p)\n",
     "\n",
     "# Display the DataFrame\n",
     "contact_info_df.head(10)"
@@ -2783,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2891,7 +2894,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2904,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3023,7 +3026,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -3161,7 +3164,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3174,7 +3177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -3204,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
