Update to scheme

--- a/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
+++ b/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
@@ -876,9 +876,9 @@
    "outputs": [],
    "source": [
     "# Export categories_df and subcategories_df as CSV files.\n",
-    "category_df.to_csv(\"Resources/category.csv\", index=False)\n",
+    "category_df.to_csv(\"Resources/category.csv\", encoding='utf8', index=False)\n",
     "\n",
-    "subcategory_df.to_csv(\"Resources/subcategory.csv\", index=False)"
+    "subcategory_df.to_csv(\"Resources/subcategory.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -2253,7 +2253,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned.to_csv(\"Resources/campaign.csv\",encoding='utf8', index=False)"
    ]
   },
   {
