--- a/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
+++ b/ETL_Mini_Project_SAhmed_NBallinger_AMahmud.ipynb
@@ -2640,7 +2640,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
